# DkDesk

./: .gitignore  README.md
DkDesk/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  assets.qrc  main.cpp
DkDesk-Server/: CMakeLists.txt  SMessageState.h  Server.cpp  Server.h  main.cpp
DkDesk-Server/common/: SJsonData.cpp  SJsonData.h
DkDesk-Server/common/cJson/: cJSON.h
DkDesk/common/: SClickWidget.cpp  SClickWidget.h  SEventFilterObject.cpp  SJsonData.cpp  SJsonData.h  SUDID.cpp  SUDID.h
DkDesk/network/: SMessageState.h  SNetworkConnect.cpp  SNetworkConnect.h
